SpringBootImagePipeline UT